# rustbook

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOC.md  PLAN.md  README.md  RELEASING.md  SPECS.md  deny.toml  plan_v0.5.md  plan_v0.6.md
.github/workflows/: ci.yml  release.yml  wheels.yml
benches/: portfolio.rs  stops.rs  throughput.rs
broker/: Cargo.toml
broker/src/: error.rs  lib.rs  mock.rs  types.rs
broker/src/binance/: auth.rs  client.rs  mod.rs  types.rs
broker/src/ibkr/: client.rs  mod.rs  orders.rs
broker/tests/: binance_parsing.rs  ibkr_types.rs
examples/: basic_usage.rs  demo.rs  demo_quick.rs  ioc_execution.rs  market_making.rs  multi_symbol_lob.rs  portfolio_backtest.rs  trading_day.rs
python/: Cargo.toml  nanobook.pyi  pyproject.toml
python/nanobook/: __init__.py
python/src/: backtest_bridge.rs  broker.rs  cv.rs  event.rs  exchange.rs  garch.rs  indicators.rs  itch.rs  lib.rs  metrics.rs  optimize.rs  risk.rs  stats.rs  strategy.rs  sweep.rs
python/tests/: profile_sweep.py  test_exchange.py  test_itch.py  test_risk.py  test_sweep.py  test_v09_features.py  test_v09_parity.py
python/tests/property/: test_prop_indicators.py  test_prop_metrics.py
python/tests/reference/: conftest.py  test_ref_cv.py  test_ref_indicators.py  test_ref_metrics.py  test_ref_stats.py
rebalancer/: Cargo.toml  config.toml.example
rebalancer/src/: audit.rs  broker.rs  config.rs  diff.rs  error.rs  execution.rs  lib.rs  main.rs  reconcile.rs  risk.rs  target.rs
rebalancer/src/ibkr/: client.rs  mod.rs  orders.rs
rebalancer/tests/: execution_integration.rs
risk/: Cargo.toml
risk/src/: checks.rs  config.rs  lib.rs  report.rs
risk/tests/: check_order_tests.rs
src/: backtest_bridge.rs  book.rs  cv.rs  error.rs  event.rs  exchange.rs  garch.rs  indicators.rs  itch.rs  level.rs  lib.rs  matching.rs  multi_exchange.rs  optimize.rs  order.rs  persistence.rs  price_levels.rs  result.rs  side.rs  snapshot.rs  stats.rs  stop.rs  tif.rs  trade.rs  types.rs
src/portfolio/: cost_model.rs  metrics.rs  mod.rs  position.rs  sweep.rs
tests/: edge_cases.rs  portfolio_invariants.rs  proptest_invariants.rs  safety_tests.rs
