[package]
name = "nanobook"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Deterministic limit order book and matching engine for testing trading algorithms"
license = "MIT"
repository = "https://github.com/ricardofrantz/nanobook"
homepage = "https://github.com/ricardofrantz/nanobook"
documentation = "https://docs.rs/nanobook"
readme = "README.md"
keywords = ["orderbook", "trading", "matching-engine", "finance", "exchange"]
categories = ["simulation", "algorithms", "data-structures"]
authors = ["Ricardo Frantz"]

[dependencies]
thiserror = "2.0"
rustc-hash = "2.1"  # FxHash - fast non-cryptographic hash

[features]
default = ["event-log"]
event-log = []  # Enable event recording for replay (disable for max perf)

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"

[[bin]]
name = "lob"
path = "src/bin/lob.rs"

[[bench]]
name = "throughput"
harness = false
