[package]
name = "nanobook-python"
version = "0.5.0"
edition = "2024"
publish = false

[lib]
name = "nanobook"
crate-type = ["cdylib"]

[features]
itch = ["nanobook/itch"]

[dependencies]
nanobook = { path = "..", features = ["event-log", "serde", "persistence", "portfolio", "parallel"] }
pyo3 = { version = "0.23", features = ["extension-module"] }
serde_json = "1"
