[package]
name = "nanobook-python"
version = "0.9.0"
edition = "2024"
publish = false

[lib]
name = "nanobook"
crate-type = ["cdylib"]

[features]
itch = ["nanobook/itch"]

[dependencies]
nanobook = { path = "..", features = ["event-log", "serde", "persistence", "portfolio", "parallel"] }
nanobook-broker = { path = "../broker", features = ["ibkr", "binance"] }
nanobook-risk = { path = "../risk" }
pyo3 = { version = "0.24", features = ["extension-module"] }
serde_json = "1"
