[package]
name = "nanobook-rebalancer"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Portfolio rebalancer bridging nanobook to Interactive Brokers"
license = "MIT"

[[bin]]
name = "rebalancer"
path = "src/main.rs"

[lib]
name = "nanobook_rebalancer"
path = "src/lib.rs"

[dependencies]
nanobook = { path = "..", features = ["portfolio", "serde"] }
ibapi = { version = "2.7", default-features = false, features = ["sync"] }
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
rustc-hash = "2.1"
anyhow = "1.0"
dialoguer = "0.11"

[dev-dependencies]
tempfile = "3"
