[package]
name = "nanobook-risk"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "Pre-trade risk engine for nanobook"
license = "MIT"
repository = "https://github.com/ricardofrantz/nanobook"
homepage = "https://github.com/ricardofrantz/nanobook"
documentation = "https://docs.rs/nanobook-risk"

[dependencies]
nanobook = { version = "0.9.0", path = "..", features = ["serde"] }
nanobook-broker = { version = "0.3.0", path = "../broker" }
rustc-hash = "2.1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
